Scrollbar Flex problem fixed

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,6 @@
 
 * {
     font-family: 'Roboto', sans-serif;
-    overflow: overlay;
 }
 
 html,
